--- a/source/_data/nightlies.yml
+++ b/source/_data/nightlies.yml
@@ -1,7 +1,7 @@
-DIAWI: 'https://i.diawi.com/wTV8P2'
-APK: 'https://status-im-nightlies.ams3.digitaloceanspaces.com/StatusIm-201207-025900-a70b07-nightly-universal.apk'
-IOS: 'https://status-im-nightlies.ams3.digitaloceanspaces.com/StatusIm-201207-025900-a70b07-nightly.ipa'
+DIAWI: 'https://i.diawi.com/J7HPne'
+APK: 'https://status-im-nightlies.ams3.digitaloceanspaces.com/StatusIm-201211-025900-efc4f6-nightly-universal.apk'
+IOS: 'https://status-im-nightlies.ams3.digitaloceanspaces.com/StatusIm-201211-025900-efc4f6-nightly.ipa'
 APP: null
 MAC: null
 WIN: null
-SHA: 'https://status-im-nightlies.ams3.digitaloceanspaces.com/StatusIm-201207-025900-a70b07-nightly.sha256'
+SHA: 'https://status-im-nightlies.ams3.digitaloceanspaces.com/StatusIm-201211-025900-efc4f6-nightly.sha256'
